Bug 1124249: Make sure we want accelerated canvas before going to SkiaGL. r=jrmuizel a=sledru